--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,11 @@ body {
   background-color: $main-color;
 }
 
-.post-list{
-  &__login-btn{
-     .root--authed & {
-       display: none;
-     }
+.post-list {
+  &__login-btn {
+    .root--authed & {
+      display: none;
+    }
   }
 
   &__logout-btn, &__new-post-btn {
@@ -20,3 +20,18 @@ body {
 }
 
 
+.root{
+  &--loading {
+    &::after {
+      display: block;
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      content: 'Loading...';
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+    }
+  }
+}
